--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles/reset.css">
   <link rel="stylesheet" href="styles/styles.css">
+  <link rel="stylesheet" href="styles/responsividade.css">
   <title>Trilha de CSS - DIO</title>
 </head>
 <body>
@@ -27,13 +28,13 @@
         desenvolver sites profissionais utilizando somente HTML e CSS: sem nenhuma biblioteca ou framework a mais.
       </p>
       <div class="modules-list">
-        <div class="module">
+        <div class="module" id="module-1">
           <span>Módulo 01:</span> primeiros passos com CSS
         </div>
-        <div class="module">
+        <div class="module" id="module-2">
           <span>Módulo 02:</span> trabalhando com layouts no CSS
         </div>
-        <div class="module">
+        <div class="module" id="module-3">
           <span>Módulo 03:</span> refinando os estilos CSS das nossas páginas
         </div>
       </div>
